# HomCmprsr

./: CMakeLists.txt  Makefile  TODO  comprs_test.cu  main.cu  main_hom.cu  report.ncu-rep
include/: AWcudaAllreduce.cuh  GSZ.h  GSZ_entry.h  comprs_test.cuh
src/: AWcudaAllreduce.cu  GSZ.cu  GSZ_entry.cu  Makefile  NonAWcudaAllreduce.cu  a.out  comprs_test.cu  cudaAllreduce.cu  gsz_o  gsz_o.cu  log  main_allred  main_allred.cu  main_hom  main_hom.cu  main_naw_allred.cu  main_vec.cu  naw_allred  nca_allred  nca_allreduce.cu  randomwalk.in  smooth.c  test.cu  test_mpi.cu
